--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.20.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.instancio/instancio-core -->
+        <dependency>
+            <groupId>org.instancio</groupId>
+            <artifactId>instancio-core</artifactId>
+            <version>2.15.0</version>
+        </dependency>
     </dependencies>
     <build>
         <defaultGoal>dependency:copy-dependencies</defaultGoal>
