refactoring the docker-compose.yml and filebeat.yml and add dependencies

--- a/filebeat.yml
+++ b/filebeat.yml
@@ -1,11 +1,10 @@
 filebeat.inputs:
   - type: log
     paths:
-      - /var/lib/docker/containers/*/*.log
+      - /project/log/app.log
 
 output.elasticsearch:
   hosts: ["elasticsearch:9200"]
-  index: "filebeat-%{+yyyy.MM.dd}"
 
 setup.template.name: "filebeat"
 setup.template.pattern: "filebeat-*"
