--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,8 @@ services:
     container_name: filebeat
     user: root
     volumes:
+      - ./:/project
       - ./filebeat.yml:/usr/share/filebeat/filebeat.yml
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-    environment:
-      - SETUP_KIBANA_HOST=kibana:5601
     depends_on:
       - kibana
       - elasticsearch
